Add handler for count in Unfall
